--- a/src/snmp_mp/Cargo.toml
+++ b/src/snmp_mp/Cargo.toml
@@ -13,3 +13,4 @@ categories = ["network-programming"]
 [dependencies]
 bitflags = "1.2.1"
 yasna = "0.4.0"
+tokio = { version = "1", features = ["full"] }
